Fix main.css footer Body Overflow

--- a/style/main.css
+++ b/style/main.css
@@ -475,7 +475,6 @@ h2.page-subheadline {
 .page-footer .page-footer-inner .footer-bar {
   position: relative;
   background-color: #FAFAFA;
-  width: 100vw;
   padding: 50px 0;
   display: flex;
   align-items: center;
